[gd_scene load_steps=5 format=3 uid="uid://cyjf4q1oow1ds"]

[ext_resource type="Script" path="res://Scenes/Environmentals/Bear_Cubs.gd" id="1_cgrw8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2lhut"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plhd5"]
albedo_color = Color(0.403922, 0.0352941, 0.439216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ltkxe"]
material = SubResource("StandardMaterial3D_plhd5")

[node name="Bear_Cubs" type="Area3D"]
script = ExtResource("1_cgrw8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("SphereShape3D_2lhut")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
mesh = SubResource("SphereMesh_ltkxe")

[node name="Cubs_Eating" type="AkEvent3D" parent="."]
event = {
"id": 1652453217,
"name": "Cubs_Eating"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Cubs_Narration" type="AkEvent3D" parent="."]
event = {
"id": 509748587,
"name": "Cubs_Narration"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Cubs_Dialog" type="AkEvent3D" parent="."]
event = {
"id": 331307707,
"name": "Cubs_Dialog"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[connection signal="end_of_event" from="Cubs_Narration" to="." method="_on_narrate_environmental_end_of_event"]
[connection signal="end_of_event" from="Cubs_Dialog" to="." method="_on_cubs_dialog_end_of_event"]
